Possible image fix
Images were too large & breaking the footer, this should fix the footer

--- a/style.css
+++ b/style.css
@@ -40,3 +40,10 @@ footer {
     bottom: 0;
     width: 100%;
 }
+
+.responsive-img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+}
